--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -15,7 +15,10 @@
     @@include('include/-portfolio-home.html')
     @@include('include/-portfolio-intro.html')
     @@include('include/-portfolio-showcase.html')
+    @@include('include/-portfolio-services.html')
     @@include('include/-portfolio-feedback.html')
+    @@include('include/-portfolio-blog.html')
+    @@include('include/-portfolio-footer.html')
     
 
     @@include('include/-footer_scripts.html')
