--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -12,6 +12,7 @@
 <body>
     
     @@include('include/-portfolio-header.html')
+    @@include('include/-portfolio-sidebar.html')
     @@include('include/-portfolio-home.html')
     @@include('include/-portfolio-intro.html')
     @@include('include/-portfolio-showcase.html')
